Hanayna laka ya hanie

--- a/assets/index.html
+++ b/assets/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
         <p>Hello World</p>
-
+        <p>Hanaina laka ya hanie</p>
         <!-- Compiled and minified JavaScript -->
         <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script> -->
          <link rel="stylesheet" href="/assets/materialize-v1.0.0/materialize/js/materialize.min.js">
