designing of web site view completed

--- a/assets/index.html
+++ b/assets/index.html
@@ -10,9 +10,10 @@
          <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
          <link rel="stylesheet" href="/assets/css/style.css">
          <link rel="stylesheet" href="/assets/css/util.css">
-
+         <link rel="stylesheet" href="/assets/materialize-v1.0.0/materialize/css/materialize-rtl.min.css">
+         <link rel="icon" href="/assets/favicon-32x32.png" type="image/x-icon">
 </head>
-<body>
+<body dir="rtl">
         <!-- Compiled and minified JavaScript -->
         <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script> -->
       <!--navbar section-----start------->
@@ -54,8 +55,8 @@
       <!---home-section------------start---------------->
       <section class="flex-c-m flex-col p-r-20 p-l-20 p-t-100 sizefull ">
         <img src="/assets/images/Udemy_logo.svg.png" alt="udemy" class="w-full max-w-200 ">
-        <a href="#" class="waves-effect waves-light btn blue darken-3 w-full max-w-250 m-t-15 mb-10 rounded_pill">Programming Tutorial</a>
-        <a href="/assets/user.html" class="waves-effect waves-light btn blue darken-3 w-full max-w-250 m-t-15 mb-10 rounded_pill">Users Management</a>
+        <a href="#" class="waves-effect waves-light btn blue darken-3 w-full max-w-250 m-t-15 mb-10 rounded_pill">اموزش برنامه نویسی</a>
+        <a href="/assets/user.html" class="waves-effect waves-light btn blue darken-3 w-full max-w-250 m-t-15 mb-10 rounded_pill">مدیریت کاربر ها</a>
 
       </section>
       <!---home-section-------------end---------------->
