addition to design of website

--- a/assets/user.html
+++ b/assets/user.html
@@ -145,24 +145,24 @@
                         </ul> -->
                         <ul class="collapsible hide-on-med-and-up m-b-0" style="list-style-type: none; padding: 0;width: 100%;left: 0px;">
                             <li class="users_list_item">
-                                <div class="collapsible-header right-align-flex">
+                                <div class="collapsible-header">
                                     <i class="material-icons blue-text darken-3 trans-0-4 users_list_arrow_icon">arrow_drop_down_circle</i>
                                     امیرحسین صبوری خسروشاهی
                                 </div>
                                 <div class="collapsible-body">
-                                    <div class="p-all-5 right-align-flex">
+                                    <div class="p-all-5 ">
                                         <span class="f-bold">نام کاربری :</span>
                                         <span>Amir#</span>
                                     </div>
-                                    <div class="p-all-5 right-align-flex">
+                                    <div class="p-all-5">
                                         <span class="f-bold">ایمیل :</span>
                                         <span>sabouriamirhossein9@gmail.com</span>
                                     </div>     
-                                    <div class="p-all-5 right-align-flex">
+                                    <div class="p-all-5">
                                         <span class="f-bold">ادرس :</span>
                                         <span>تهران, میدان ولیعصر, بلوار کریم خان, کوچه بالاور, پلاک 2</span>
                                     </div>  
-                                    <div class="p-all-5 right-align-flex">
+                                    <div class="p-all-5">
                                         <span class="f-bold">اکشن :</span>
                                         <i class="material-icons red-text m-r-6 m-l-5">delete_forever</i>
                                         <i class="material-icons blue-text m-l-15">edit</i>
@@ -170,24 +170,24 @@
                                 </div>
                             </li>
                             <li class="users_list_item ">
-                                <div class="collapsible-header right-align-flex" style="text-align: right; direction: rtl;">
+                                <div class="collapsible-header" style="text-align: right; direction: rtl;">
                                     <i class="material-icons blue-text darken-3 trans-0-4 users_list_arrow_icon">arrow_drop_down_circle</i>
                                     میلاد دهیامی
                                 </div>
                                 <div class="collapsible-body" style="text-align: right; direction: rtl;">
-                                    <div class="p-all-5 right-align-flex">
+                                    <div class="p-all-5">
                                         <span class="f-bold">نام کاربری :</span>
                                         <span>milad_#</span>
                                     </div>
-                                    <div class="p-all-5 right-align-flex">
+                                    <div class="p-all-5">
                                         <span class="f-bold">ایمیل :</span>
                                         <span>miladdehyammi9@gmail.com</span>
                                     </div>      
-                                    <div class="p-all-5 right-align-flex">
+                                    <div class="p-all-5">
                                         <span class="f-bold">ادرس :</span>
                                         <span>تبریز, ابرسان, خیابان اسکان 5, ساختمان مداد</span>
                                     </div>  
-                                    <div class="p-all-5 right-align-flex">
+                                    <div class="p-all-5">
                                         <span class="f-bold">اکشن :</span>
                                         <i class="material-icons red-text m-r-6 m-l-5">delete_forever</i>
                                         <i class="material-icons blue-text m-l-15">edit</i>
@@ -195,24 +195,24 @@
                                 </div>
                             </li>
                             <li class="users_list_item">
-                                <div class="collapsible-header right-align-flex" style="text-align: right; direction: rtl;">
+                                <div class="collapsible-header " style="text-align: right; direction: rtl;">
                                     <i class="material-icons blue-text darken-3 trans-0-4 users_list_arrow_icon">arrow_drop_down_circle</i>
                                     امیرحسین امیری
                                 </div>
                                 <div class="collapsible-body" style="text-align: right; direction: rtl;">
-                                    <div class="p-all-5 right-align-flex">
+                                    <div class="p-all-5">
                                         <span class="f-bold">نام کاربری :</span>
                                         <span>Amiri#</span>
                                     </div>
-                                    <div class="p-all-5 right-align-flex">
+                                    <div class="p-all-5">
                                         <span class="f-bold">ایمیل :</span>
                                         <span>amirhosseinamiri9@gmail.com</span>
                                     </div>  
-                                    <div class="p-all-5 right-align-flex">
+                                    <div class="p-all-5">
                                         <span class="f-bold">ادرس :</span>
                                         <span>استانبول, میدان تقسیم, هتل گرانزا</span>
                                     </div>  
-                                    <div class="p-all-5 right-align-flex">
+                                    <div class="p-all-5">
                                         <span class="f-bold">اکشن :</span>
                                         <i class="material-icons red-text m-r-6 m-l-5">delete_forever</i>
                                         <i class="material-icons blue-text m-l-15">edit</i>
